# ai-agent-cicd

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  rules.json
.github/workflows/: deploy.yml
app/: deps.py  logging.py
app/api/route/: agent_routers.py  chat_router.py  user_routers.py
app/core/: db.py  tools.py
app/models/schemas/: chat.py
app/repository/: vector_repo.py
app/repository/client/: upstage_client.py
app/service/: agent_service.py  chat_service.py  embedding_service.py  time_service.py  user_service.py  vector_service.py
chroma_data/: chroma.sqlite3
